# ai-job-tracker

./: .gitignore  README.md  docker-compose.yml
frontend/: .env.example  .eslintrc.json  .prettierignore  .prettierrc  Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css  main.tsx
frontend/src/app/: store.ts
frontend/src/components/: AppNavbar.tsx  ImageUploadPage.tsx  LandingPage.tsx
frontend/src/components/landing/: Hero.tsx  Navbar.tsx  Testimonial.tsx
frontend/src/components/layout/: AppNavbar.tsx
frontend/src/components/ui/: Logo.tsx
frontend/src/pages/Home/: index.tsx
frontend/src/pages/Home/components/: AlternatingFeatures.tsx  FinalCTA.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Testimonial.tsx
frontend/src/pages/Tracker/: index.tsx
frontend/src/pages/Tracker/components/: InfoModal.tsx  VisaSponsorshipBadge.tsx  agGridTheme.tsx
frontend/src/pages/Upload/: index.tsx
frontend/src/pages/Upload/components/: AnalyzedResult.tsx  ParsedDataViewer.tsx  UploadPreview.tsx  fontAwesomeJobIcons.ts
frontend/src/services/: analyzeTextApi.ts  jobApi.ts  parseImageApi.ts  uploadApi.ts
image_analyzer/: .env.db.example  .env.example  Dockerfile  pyproject.toml
image_analyzer/app/: database.py  dependencies.py  exceptions.py  models.py  repository.py  schemas.py
image_analyzer/app/api/: api.py
image_analyzer/app/api/endpoints/: analyze_text.py
image_analyzer/app/core/: config.py
image_analyzer/app/services/: image_analyzer.py
image_parser/: .env.db.example  .env.example  Dockerfile  main.py  pyproject.toml
image_parser/app/: database.py  dependencies.py  models.py  repository.py  schemas.py
image_parser/app/api/: api.py
image_parser/app/api/endpoints/: health.py  ocr.py  parsed_images.py
image_parser/app/core/: config.py
image_parser/app/exceptions/: ocr.py
image_parser/app/middleware/: logging_middleware.py
image_parser/app/schemas/: ocr.py
image_parser/app/services/: ocr.py
job_tracker/: .env.db.example  .env.example  Dockerfile  main.py  pyproject.toml
job_tracker/app/: dependencies.py  enums.py  models.py  repository.py  schemas.py
job_tracker/app/api/: api.py
job_tracker/app/api/endpoints/: jobs.py
job_tracker/app/core/: __init__.py
