[project]
name = "image-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.0",
    "pytesseract>=0.3.13",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Black-equivalent config
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = [
    "W", # Pycodestyle warnings
    "E", # Pycodestyle errors
    "I", # Isort
    "N", # PEP8 naming conventions,
    "RUF"
]

ignore = [
    "F403", # Modularized project, * imports are fine
    "F405", # Modularized project, * imports are fine
    "C901", # McCabe Complexity
    "E501", # Supress line length for legacy code as it can't be autoformatted, newer code will be auto'd,
    "W191", # This project uses tabs
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
skip-magic-trailing-comma = false
line-ending = "auto"
